# libssusb

./: file.c  file.h  meson.build  ssusb.c  ssusb_interface.c
drivers/: ftdi_ext.h
include/ssusb/: ssusb-export.h  ssusb.h
